--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+
 
 
 :root {
@@ -21,4 +21,30 @@
     --font-weight-m: 600;
     --font-weight-l: 700;
     
+}
+
+html {
+    background-color: var(--purple-100);
+
+}
+
+header {
+    margin: none;
+    padding: none;
+    border: none;
+    width: 100vw !important;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+div.accordian-holder {
+    background-color: var(--white-color);
+    z-index: 3;
+    position: relative;
+    margin: 25px;
+    padding: 25px auto;
 }
